src/Bluetooth/Raw/SdpLib.hs

{-# LINE 1 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{-# OPTIONS_GHC -fno-warn-unused-imports #-}
{-# LINE 2 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 3 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 4 "src/Bluetooth/Raw/SdpLib.hsc" #-}
module Bluetooth.Raw.SdpLib where
import Foreign.Ptr
import Foreign.Ptr (Ptr,FunPtr,plusPtr)
import Foreign.Ptr (wordPtrToPtr,castPtrToFunPtr)
import Foreign.Storable
import Foreign.C.Types
import Foreign.C.String (CString,CStringLen,CWString,CWStringLen)
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Array (peekArray,pokeArray)
import Data.Int
import Data.Word

{-# LINE 7 "src/Bluetooth/Raw/SdpLib.hsc" #-}

import Bluetooth.Raw.Sdp
import Bluetooth.Raw.Bluetooth
import Bluetooth.Raw.Hci
type C'sdp_list_func_t = FunPtr (Ptr () -> Ptr () -> IO ())
foreign import ccall "wrapper" mk'sdp_list_func_t
  :: (Ptr () -> Ptr () -> IO ()) -> IO C'sdp_list_func_t
foreign import ccall "dynamic" mK'sdp_list_func_t
  :: C'sdp_list_func_t -> (Ptr () -> Ptr () -> IO ())

{-# LINE 12 "src/Bluetooth/Raw/SdpLib.hsc" #-}
type C'sdp_free_func_t = FunPtr (Ptr () -> IO ())
foreign import ccall "wrapper" mk'sdp_free_func_t
  :: (Ptr () -> IO ()) -> IO C'sdp_free_func_t
foreign import ccall "dynamic" mK'sdp_free_func_t
  :: C'sdp_free_func_t -> (Ptr () -> IO ())

{-# LINE 13 "src/Bluetooth/Raw/SdpLib.hsc" #-}
type C'sdp_comp_func_t = FunPtr (Ptr () -> Ptr () -> IO CInt)
foreign import ccall "wrapper" mk'sdp_comp_func_t
  :: (Ptr () -> Ptr () -> IO CInt) -> IO C'sdp_comp_func_t
foreign import ccall "dynamic" mK'sdp_comp_func_t
  :: C'sdp_comp_func_t -> (Ptr () -> Ptr () -> IO CInt)

{-# LINE 14 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_list_append" c'sdp_list_append
  :: Ptr C'_sdp_list -> Ptr () -> IO (Ptr C'_sdp_list)
foreign import ccall "&sdp_list_append" p'sdp_list_append
  :: FunPtr (Ptr C'_sdp_list -> Ptr () -> IO (Ptr C'_sdp_list))

{-# LINE 15 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_list_remove" c'sdp_list_remove
  :: Ptr C'_sdp_list -> Ptr () -> IO (Ptr C'_sdp_list)
foreign import ccall "&sdp_list_remove" p'sdp_list_remove
  :: FunPtr (Ptr C'_sdp_list -> Ptr () -> IO (Ptr C'_sdp_list))

{-# LINE 16 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_list_insert_sorted" c'sdp_list_insert_sorted
  :: Ptr C'_sdp_list -> Ptr () -> C'sdp_comp_func_t -> IO (Ptr C'_sdp_list)
foreign import ccall "&sdp_list_insert_sorted" p'sdp_list_insert_sorted
  :: FunPtr (Ptr C'_sdp_list -> Ptr () -> C'sdp_comp_func_t -> IO (Ptr C'_sdp_list))

{-# LINE 17 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_list_free" c'sdp_list_free
  :: Ptr C'_sdp_list -> C'sdp_free_func_t -> IO ()
foreign import ccall "&sdp_list_free" p'sdp_list_free
  :: FunPtr (Ptr C'_sdp_list -> C'sdp_free_func_t -> IO ())

{-# LINE 18 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #cinline sdp_list_len , Ptr <struct _sdp_list> -> IO CInt -}
{- #cinline sdp_list_find , Ptr <struct _sdp_list> -> Ptr () -> <sdp_comp_func_t> -> IO (Ptr <struct _sdp_list>) -}
{- #cinline sdp_list_foreach , Ptr <struct _sdp_list> -> <sdp_list_func_t> -> Ptr () -> IO () -}
{- typedef struct {
            int sock;
            int state;
            int local;
            int flags;
            uint16_t tid;
            void * priv;
        } sdp_session_t; -}

{-# LINE 30 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 31 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 32 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 33 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 34 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 35 "src/Bluetooth/Raw/SdpLib.hsc" #-}

{-# LINE 36 "src/Bluetooth/Raw/SdpLib.hsc" #-}
data C'sdp_session_t = C'sdp_session_t{
  c'sdp_session_t'sock :: CInt,
  c'sdp_session_t'state :: CInt,
  c'sdp_session_t'local :: CInt,
  c'sdp_session_t'flags :: CInt,
  c'sdp_session_t'tid :: CUShort,
  c'sdp_session_t'priv :: Ptr ()
} deriving (Eq,Show)
p'sdp_session_t'sock p = plusPtr p 0
p'sdp_session_t'sock :: Ptr (C'sdp_session_t) -> Ptr (CInt)
p'sdp_session_t'state p = plusPtr p 4
p'sdp_session_t'state :: Ptr (C'sdp_session_t) -> Ptr (CInt)
p'sdp_session_t'local p = plusPtr p 8
p'sdp_session_t'local :: Ptr (C'sdp_session_t) -> Ptr (CInt)
p'sdp_session_t'flags p = plusPtr p 12
p'sdp_session_t'flags :: Ptr (C'sdp_session_t) -> Ptr (CInt)
p'sdp_session_t'tid p = plusPtr p 16
p'sdp_session_t'tid :: Ptr (C'sdp_session_t) -> Ptr (CUShort)
p'sdp_session_t'priv p = plusPtr p 24
p'sdp_session_t'priv :: Ptr (C'sdp_session_t) -> Ptr (Ptr ())
instance Storable C'sdp_session_t where
  sizeOf _ = 32
  alignment _ = 8
  peek p = do
    v0 <- peekByteOff p 0
    v1 <- peekByteOff p 4
    v2 <- peekByteOff p 8
    v3 <- peekByteOff p 12
    v4 <- peekByteOff p 16
    v5 <- peekByteOff p 24
    return $ C'sdp_session_t v0 v1 v2 v3 v4 v5
  poke p (C'sdp_session_t v0 v1 v2 v3 v4 v5) = do
    pokeByteOff p 0 v0
    pokeByteOff p 4 v1
    pokeByteOff p 8 v2
    pokeByteOff p 12 v3
    pokeByteOff p 16 v4
    pokeByteOff p 24 v5
    return ()

{-# LINE 37 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- typedef enum {
            SDP_ATTR_REQ_INDIVIDUAL = 1, SDP_ATTR_REQ_RANGE
        } sdp_attrreq_type_t; -}
type C'sdp_attrreq_type_t = CUInt

{-# LINE 41 "src/Bluetooth/Raw/SdpLib.hsc" #-}
c'SDP_ATTR_REQ_INDIVIDUAL = 1
c'SDP_ATTR_REQ_INDIVIDUAL :: (Num a) => a

{-# LINE 42 "src/Bluetooth/Raw/SdpLib.hsc" #-}
c'SDP_ATTR_REQ_RANGE = 2
c'SDP_ATTR_REQ_RANGE :: (Num a) => a

{-# LINE 43 "src/Bluetooth/Raw/SdpLib.hsc" #-}
type C'sdp_callback_t = FunPtr (CUChar -> CUShort -> Ptr CUChar -> CSize -> Ptr () -> IO ())
foreign import ccall "wrapper" mk'sdp_callback_t
  :: (CUChar -> CUShort -> Ptr CUChar -> CSize -> Ptr () -> IO ()) -> IO C'sdp_callback_t
foreign import ccall "dynamic" mK'sdp_callback_t
  :: C'sdp_callback_t -> (CUChar -> CUShort -> Ptr CUChar -> CSize -> Ptr () -> IO ())

{-# LINE 44 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_connect" c'sdp_connect
  :: Ptr C'bdaddr_t -> Ptr C'bdaddr_t -> CUInt -> IO (Ptr C'sdp_session_t)
foreign import ccall "&sdp_connect" p'sdp_connect
  :: FunPtr (Ptr C'bdaddr_t -> Ptr C'bdaddr_t -> CUInt -> IO (Ptr C'sdp_session_t))

{-# LINE 45 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_close" c'sdp_close
  :: Ptr C'sdp_session_t -> IO CInt
foreign import ccall "&sdp_close" p'sdp_close
  :: FunPtr (Ptr C'sdp_session_t -> IO CInt)

{-# LINE 46 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_socket" c'sdp_get_socket
  :: Ptr C'sdp_session_t -> IO CInt
foreign import ccall "&sdp_get_socket" p'sdp_get_socket
  :: FunPtr (Ptr C'sdp_session_t -> IO CInt)

{-# LINE 47 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_create" c'sdp_create
  :: CInt -> CUInt -> IO (Ptr C'sdp_session_t)
foreign import ccall "&sdp_create" p'sdp_create
  :: FunPtr (CInt -> CUInt -> IO (Ptr C'sdp_session_t))

{-# LINE 48 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_error" c'sdp_get_error
  :: Ptr C'sdp_session_t -> IO CInt
foreign import ccall "&sdp_get_error" p'sdp_get_error
  :: FunPtr (Ptr C'sdp_session_t -> IO CInt)

{-# LINE 49 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_process" c'sdp_process
  :: Ptr C'sdp_session_t -> IO CInt
foreign import ccall "&sdp_process" p'sdp_process
  :: FunPtr (Ptr C'sdp_session_t -> IO CInt)

{-# LINE 50 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_notify" c'sdp_set_notify
  :: Ptr C'sdp_session_t -> Ptr C'sdp_callback_t -> Ptr () -> IO CInt
foreign import ccall "&sdp_set_notify" p'sdp_set_notify
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'sdp_callback_t -> Ptr () -> IO CInt)

{-# LINE 51 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_service_search_async" c'sdp_service_search_async
  :: Ptr C'sdp_session_t -> Ptr C'_sdp_list -> CUShort -> IO CInt
foreign import ccall "&sdp_service_search_async" p'sdp_service_search_async
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'_sdp_list -> CUShort -> IO CInt)

{-# LINE 52 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_service_attr_async" c'sdp_service_attr_async
  :: Ptr C'sdp_session_t -> CUInt -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_service_attr_async" p'sdp_service_attr_async
  :: FunPtr (Ptr C'sdp_session_t -> CUInt -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 53 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_service_search_attr_async" c'sdp_service_search_attr_async
  :: Ptr C'sdp_session_t -> Ptr C'_sdp_list -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_service_search_attr_async" p'sdp_service_search_attr_async
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'_sdp_list -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 54 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_gen_tid" c'sdp_gen_tid
  :: Ptr C'sdp_session_t -> IO CUShort
foreign import ccall "&sdp_gen_tid" p'sdp_gen_tid
  :: FunPtr (Ptr C'sdp_session_t -> IO CUShort)

{-# LINE 55 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_general_inquiry" c'sdp_general_inquiry
  :: Ptr C'inquiry_info -> CInt -> CInt -> Ptr CUChar -> IO CInt
foreign import ccall "&sdp_general_inquiry" p'sdp_general_inquiry
  :: FunPtr (Ptr C'inquiry_info -> CInt -> CInt -> Ptr CUChar -> IO CInt)

{-# LINE 56 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_int_attr" c'sdp_get_int_attr
  :: Ptr C'sdp_record_t -> CUShort -> Ptr CInt -> IO CInt
foreign import ccall "&sdp_get_int_attr" p'sdp_get_int_attr
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> Ptr CInt -> IO CInt)

{-# LINE 57 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_string_attr" c'sdp_get_string_attr
  :: Ptr C'sdp_record_t -> CUShort -> CString -> CInt -> IO CInt
foreign import ccall "&sdp_get_string_attr" p'sdp_get_string_attr
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> CString -> CInt -> IO CInt)

{-# LINE 58 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_data_alloc" c'sdp_data_alloc
  :: CUChar -> Ptr () -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_data_alloc" p'sdp_data_alloc
  :: FunPtr (CUChar -> Ptr () -> IO (Ptr C'sdp_data_struct))

{-# LINE 59 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_data_alloc_with_length" c'sdp_data_alloc_with_length
  :: CUChar -> Ptr () -> CUInt -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_data_alloc_with_length" p'sdp_data_alloc_with_length
  :: FunPtr (CUChar -> Ptr () -> CUInt -> IO (Ptr C'sdp_data_struct))

{-# LINE 60 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_data_free" c'sdp_data_free
  :: Ptr C'sdp_data_struct -> IO ()
foreign import ccall "&sdp_data_free" p'sdp_data_free
  :: FunPtr (Ptr C'sdp_data_struct -> IO ())

{-# LINE 61 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_data_get" c'sdp_data_get
  :: Ptr C'sdp_record_t -> CUShort -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_data_get" p'sdp_data_get
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> IO (Ptr C'sdp_data_struct))

{-# LINE 62 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_seq_alloc" c'sdp_seq_alloc
  :: Ptr (Ptr ()) -> Ptr (Ptr ()) -> CInt -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_seq_alloc" p'sdp_seq_alloc
  :: FunPtr (Ptr (Ptr ()) -> Ptr (Ptr ()) -> CInt -> IO (Ptr C'sdp_data_struct))

{-# LINE 63 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_seq_alloc_with_length" c'sdp_seq_alloc_with_length
  :: Ptr (Ptr ()) -> Ptr (Ptr ()) -> Ptr CInt -> CInt -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_seq_alloc_with_length" p'sdp_seq_alloc_with_length
  :: FunPtr (Ptr (Ptr ()) -> Ptr (Ptr ()) -> Ptr CInt -> CInt -> IO (Ptr C'sdp_data_struct))
